# CloudAppsProject1

./: Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: deploy.yml
api/auth/: decorators.py  models.py  routes.py  user_pb2.py  user_pb2_grpc.py
api/hardware/: hardware_pb2.py  hardware_pb2_grpc.py  routes.py
api/projects/: project_pb2.py  project_pb2_grpc.py  routes.py  smoke_grpc.py
api/protos/: README.md  hardware.proto  project.proto  user.proto
frontend/src/: App.tsx  client.ts  types.ts
frontend/src/components/: Billing.tsx  HardwareManagement.tsx  Header.tsx
frontend/src/services/: authService.ts
k8s/: flask-deployment.yaml  flask-ingress.yaml  flask-service.yaml  flask-servicemonitor.yaml
notes/: OBSERVABILITY_NOTES.MD
